--- a/day03-17-CSS/day08-结构伪类/day08-09_笔记.md
+++ b/day03-17-CSS/day08-结构伪类/day08-09_笔记.md
@@ -67,7 +67,54 @@ relative 是相对定位，相对于自己的原始位置。
 fixed 是固定定位，把元素从标准流中拿出来，然后相对于视口进行定位，在滚动中，位置也不会发生变化，在视口中的固定位置保持不变。
 
 ### 固定定位的练习
+
+定位是相对于视口固定的。
+
 对于line-height 的设置，MDN上面推荐设置为无属性数字，一般设置为1.5，不会在继承时产生不确定的结果。
+
+### 绝对定位
+定位参照对象是最邻近的**定位**祖先元素
+如果找不到这样的祖先元素，参照对象是视口
+
+开发中使用定位的父级元素确定子元素的位置，父元素的定位要设置为相对定位，此时父元素不会脱标。
+
+
+
+### 将position设置为absolute/fixed，有以下特点。
+#### 最基本的特性
+把这样的元素成为绝对定位元素，
+
+可以随意设置宽高
+宽高默认由内容决定
+不再受标准流的约束
+  不再严格按照从上到下、从左到右排布
+  不再严格区分块级(block)、行内级(inline),行内块级(inline-block)的很多特性都会消失
+不再给父元素汇报宽高数据
+脱标元素内部默认还是按照标准流布局
+
+#### 实现水平垂直居中
+对于绝对定位元素来说，
+
+定位参照对象的宽度 = left + right + margin-left + margin-right + 绝对定位元素的实际占用宽度
+定位参照对象的高度 = top + bottom + margin-top + margin-bottom + 绝对定位元素的实际占用高度
+
+等价于下面的等式。
+
+父元素 = left + right + margin-left + margin-right + 子元素
+父元素 = top + bottom + margin-top + margin-bottom + 子元素
+
+通过设置自身的位置，相对于父元素，上下左右为0，但是margin为auto，由此浏览器平均分配到父元素的距离，来实现水平垂直居中。
+
+
+#### auto到底是什么？
+auto：交给浏览器，你来决定吧
+
+width:auto;
+1.行内非替换元素->width:包裹内容
+2.块级元素->width:包含块的宽度
+3.绝对定位元素->width:包裹内容
+
+
 
 
 
