study day09, add a demo

--- a/day03-17-CSS/day08-结构伪类/day08-09_笔记.md
+++ b/day03-17-CSS/day08-结构伪类/day08-09_笔记.md
@@ -116,6 +116,79 @@ width:auto;
 
 
 
+### sticky 粘性定位
+在导航栏中用的比较多。
+sticky是相对于最近的滚动祖先包含视口的（the nearest ancestor scroll container's scrollport)
+
+相对于最临近的滚动视口进行停留。
+
+用法
+positon: sticky;
+top:0l;
+
+
+
+### z-index属性
+z-index属性用来设置定位元素的层叠顺序（仅对定位元素有效）
+取值可以是正整数、负整数、0
+
+取值越大，离人眼越近。
+
+比较原则
+如果是兄弟关系
+z-indexi越大，层叠在越上面
+z-index相等，写在后面的那个元素层叠在上面
+如果不是兄弟关系
+各自从元素自己以及祖先元素中，找出最邻近的2个定位元素进行比较
+而且这2个定位元素必须有设置z-index的具体数值
+
+
+### 浮动
+
+fIot属性可以指定一个元素应沿其容器的左侧或右侧放置，允许文本和内联元素环绕它
+float属性最初只用于在一段文本内浮动图像，实现文字环绕的效果；
+
+绝对定位、浮动都会让元素脱离标准流，以达到灵活布局的效果
+可以通过float属性让元素产生浮动效果，float的常用取值
+left, 向左浮动
+right，向右浮动
+
+#### 浮动规则
+
+元素一旦浮动后，脱离标准流
+朝着向左或向右方向移动，直到自己的边界紧贴着包含块（一般是父元素）或者其他浮动元素的边界为止
+
+定位元素会层叠在浮动元素上面
+
+浮动不能超过父元素-包含块
+
+浮动元素之间不能层叠
+
+浮动元素不能与行内级内容层叠，行内级内容将会被浮动元素推出
+比如行内级元素、inline-block元素、块级元素的文字内容
+
+行内级元素、inline-block元素浮动后，其顶部将与所在行的顶部对齐
+
+
+#### 空隙的解决方案
+将多个行内级元素中间的空格（间隙）去除的方法
+1.别除换行符不推荐）
+2.将父级元素font-size设置为0，·但是需要子元素设置回来
+3.通过子元素(span)统一向一个方向浮动即可
+4.fLex布局（还没有学习）
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
