add sonme files

--- a/day03-17-CSS/day09_元素定位-浮动/day08-09_笔记.md
+++ b/day03-17-CSS/day09_元素定位-浮动/day08-09_笔记.md
@@ -202,7 +202,7 @@ clear属性可以指定一个元素是否必须移动（清除浮动后）到在
 clear的常用取值
 left:要求元素的顶部低于之前生成的所有左浮动元素的底部
 right:要求元素的顶部低于之前生成的所有右浮动元素的底部
-both:要求元素的顶部低于之前生成的所有浮动元素的底部
+both:**要求元素的顶部低于之前生成的所有浮动元素的底部**
 none:默认值，无特殊要求
 
 
@@ -237,13 +237,6 @@ none:默认值，无特殊要求
 
 #### 使用精灵图的位置
 在CSS代码中设置的是背景图的位置，使用background-positon，而不是直接设置position
-
-
-
-
-
-
-
 
 
 
